<resources>
    <string name="app_name">ExceriseActivitys</string>
    <string name="stt">STT</string>
    <string name="input_name">Name:</string>
    <string name="date">Date</string>
    <string name="age">Age</string>
    <string name="getname">GetName</string>
    <string name="getdate">GetDate</string>
    <string name="calculate">Calculate</string>
    <string name="ok">Ok</string>
    <string name="digits">0123456789</string>
</resources>
